--- a/PBI & Notes/ScrumNotes/v.52/2022-12-30.md
+++ b/PBI & Notes/ScrumNotes/v.52/2022-12-30.md
@@ -45,8 +45,12 @@
 
 # Robin
 
-   * Vad har jag gjort? 
+   *Vad har jag gjort?*
+     Påbörjat "Wholepage/hela bioprogrammet"
 
-   * Vad ska jag göra?  
+   *Vad ska jag göra?*
+     Fortsätta med strukturen för att få fram filmerna
 
-   * Finns det något hinder för det jag ska göra?
+   *Finns det något hinder för det jag ska göra?*
+     hindret var att vi inte hade tänkt på att dem flesta sidorna från secnav ska renderas med js. 
+     åtgärden blev att vi scrum-ishar och slår ihop alla secnav sidorna och gör javascripten parprogrammerad
