Add scrumNotes (Daniel 2022-12-30)

--- a/PBI & Notes/ScrumNotes/v.52/2022-12-30.md
+++ b/PBI & Notes/ScrumNotes/v.52/2022-12-30.md
@@ -19,10 +19,14 @@
 # Daniel
 
    * Vad har jag gjort? 
+   Jag har påbörjat att göra den andra navigationbaren (secNav) och
+   skapat struktur(Den här) för att skriva in dagliga scrumnotes
 
    * Vad ska jag göra?  
+   Fortsätta med navBaren under helgen och förhoppnignsvis göra klart den tills på måndag.
 
    * Finns det något hinder för det jag ska göra?
+   Nej inte vad jag kan se just nu. Eventuella frågetecken kring PBI som kan missupptfattas.
 
 
 # Linda
