--- a/PBI & Notes/ScrumNotes/v.1/2023-01-02.md
+++ b/PBI & Notes/ScrumNotes/v.1/2023-01-02.md
@@ -49,8 +49,9 @@
 
 # Robin
 
-   * Vad har jag gjort? 
-
-   * Vad ska jag göra?  
-
-   * Finns det något hinder för det jag ska göra?
+   *Vad har jag gjort?*
+   jobbat med hela bioprogrammet sidan
+   *Vad ska jag göra?* 
+   göra klart... eskalerade till att bli för mycket javascript 
+   *Finns det något hinder för det jag ska göra?*
+    inte längre
