--- a/PBI & Notes/ScrumNotes/v.1/2023-01-02.md
+++ b/PBI & Notes/ScrumNotes/v.1/2023-01-02.md
@@ -2,9 +2,17 @@
 
    * Vad har jag gjort? 
 
-   * Vad ska jag göra?  
+   Jag har försökt lösa Sass, problemet. 
+   Kommer ingen vart.
+   Har börjat med ett annat kort och fokuserat på HTML bitarna då jag kan göra dem utan sass.
+
+   * Vad ska jag göra? 
+
+   Felsöka mera, skicka meddelande till Richard om hjälp samt googla mer.
 
    * Finns det något hinder för det jag ska göra?
+   
+   Sass vill inte som jag vill. 
 
 
 # Burak
