--- a/PBI & Notes/ScrumNotes/v.1/2023-01-04.md
+++ b/PBI & Notes/ScrumNotes/v.1/2023-01-04.md
@@ -1,52 +1,47 @@
 # Alvar
 
-   * Vad har jag gjort? 
+- Vad har jag gjort?
 
-   * Vad ska jag göra?  
+- Vad ska jag göra?
 
-   * Finns det något hinder för det jag ska göra?
-
+- Finns det något hinder för det jag ska göra?
 
 # Burak
 
-   * Vad har jag gjort? 
+- Vad har jag gjort?
 
-   * Vad ska jag göra?  
+- Vad ska jag göra?
 
-   * Finns det något hinder för det jag ska göra?
-
+- Finns det något hinder för det jag ska göra?
 
 # Daniel
 
-   * Vad har jag gjort? 
+- Vad har jag gjort?
 
-   * Vad ska jag göra?  
+- Vad ska jag göra?
 
-   * Finns det något hinder för det jag ska göra?
-
+- Finns det något hinder för det jag ska göra?
 
 # Linda
 
-   * Vad har jag gjort? 
+- Vad har jag gjort?
 
-   * Vad ska jag göra?  
+- Vad ska jag göra?
 
-   * Finns det något hinder för det jag ska göra?
-
+- Finns det något hinder för det jag ska göra?
 
 # Rasmus
 
-   * Vad har jag gjort? 
+- Jag har suttit och fixat små grejer som att alla länkar och funktioner fungerar som dem ska över alla html filer.
 
-   * Vad ska jag göra?  
+- Hjälpa till med att reviewa PR så att vi får med korten in till huvudbranchen. Inför vårat sista möte imorgon.
 
-   * Finns det något hinder för det jag ska göra?
-
+- Inga större hinder
 
 # Robin
 
-   * Vad har jag gjort? 
+- Vad har jag gjort?
 
-   * Vad ska jag göra?  
+- Vad ska jag göra?
 
-   * Finns det något hinder för det jag ska göra?
+- Finns det något hinder för det jag ska göra?
